2012-12-17  Nick Clifton  <nickc@redhat.com>

	* AUTHORS: Add copyright notice.
	* INSTALL: Likewise.
	* Makefile.am: Likewise.
	* NEWS: Likewise.
	* co-for-gen-all: Likewise.
	* configure.in: Likewise.
	* gen-all: Likewise.
	* gen-all-desc: Likewise.
	* gen-all-doc: Likewise.
	* gen-all-intrinsics: Likewise.
	* gen-all-opcodes: Likewise.
	* gen-all-sid: Likewise.
	* gen-all-sim: Likewise.
	* doc/Makefile.am: Likewise.
	* testsuite/Makefile.am: Likewise.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* testsuite/Makefile.in: Regenerate.

2012-10-29  Mike Stump  <mikestump@comcast.net>

	* Makefile.am: Add install-html and install-pdf.
	* Makefile.in: Regenerate.

2011-08-22  Nick Clifton  <nickc@redhat.com>

	* cpu/fr30.cpu: Delete.  Move to top level cpu directory.
	* cpu/fr30.opc: Likewise.
	* cpu/ip2k.cpu: Likewise.
	* cpu/ip2k.opc: Likewise.
	* cpu/mep-avc.cpu: Likewise.
	* cpu/mep-avc2.cpu: Likewise.
	* cpu/mep-c5.cpu: Likewise.
	* cpu/mep-core.cpu: Likewise.
	* cpu/mep-default.cpu: Likewise.
	* cpu/mep-ext-cop.cpu: Likewise.
	* cpu/mep-fmax.cpu: Likewise.
	* cpu/mep-h1.cpu: Likewise.
	* cpu/mep-ivc2.cpu: Likewise.
	* cpu/mep-rhcop.cpu: Likewise.
	* cpu/mep-sample-ucidsp.cpu: Likewise.
	* cpu/mep.cpu: Likewise.
	* cpu/mep.opc: Likewise.
	* cpu/openrisc.cpu: Likewise.
	* cpu/openrisc.opc: Likewise.
	* cpu/xstormy16.cpu: Likewise.
	* cpu/xstormy16.opc: Likewise.

2010-10-28  Nick Clifton<nickc@redhat.com>

	* cpu/xstormy16.cpu (alignfix-mem-far): New macro.  Like
	alignfix-mem, but works with 32-bit addresses.
	(set-alignfix-mem-far): New macro.  Like set-alignfix-mem but
	works with 32-bit addresses.
	(movfgrgri, movfgrgripostinc, movfgrgripredec, movfgrgrii,
	movfgrgriipostinc, movfgrgriipredec): Use alignfix-mem-far.
	(movfgrigr, movfgripostincgr, movfgripredecgr): Use
	set-alignfix-mem-far.
	(movfgrgriipostinc, movfgriipostincgr): Propagate addition to
	source register into base register.